--- a/Aula-16/temp.html
+++ b/Aula-16/temp.html
@@ -10,7 +10,7 @@
     <h1>Controle de Tempos</h1>
     <h2 id="tempo">0</h2>
     <button onclick="ativarContagem()" class="start">Ativar Contagem</button>
-    <button class="stop">Parar Contagem</button>
+    <button onabort="" class="stop">Parar Contagem</button>
 
     <script src="temp.js"></script>
 
