--- a/Lista de tarefa projeto min/index.html
+++ b/Lista de tarefa projeto min/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@6.5.95/css/materialdesignicons.min.css">
 </head>
 <body>
-    <h1>Lista de tarefas.</h1>
+    <h1>Lista de compras.</h1>
 
     <header>
         <input id="inputTarefa" type="text" placeholder="Digite sua tarefa." name="" id="">
